--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reac-base",
+  "name": "lokal-talk-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,13 +17,13 @@
     "graphql": "^14.6.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "source-map-explorer": "^2.2.2"
